--- a/server/battleship.cabal
+++ b/server/battleship.cabal
@@ -33,7 +33,9 @@ Executable battleship
     lens                      >= 4.16    && < 4.17,
     mongoDB                   >= 2.4     && < 3,
     configurator              >= 0.3     && < 0.4,
-    bson                      >= 0.3     && < 0.4
+    bson                      >= 0.3     && < 0.4,
+    uuid                      >= 1.3     && < 1.4,
+    time                      >= 1.8     && < 2.0
 
   if flag(development)
     build-depends:
