--- a/client/tsconfig.prod.json
+++ b/client/tsconfig.prod.json
@@ -1,6 +1,7 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "sourceMap": false
+    "sourceMap": false,
+    "mode": "production"
   }
 }
