--- a/server/battleship.cabal
+++ b/server/battleship.cabal
@@ -35,7 +35,7 @@ Executable battleship
     configurator              >= 0.3     && < 0.4,
     bson                      >= 0.3     && < 0.4,
     uuid                      >= 1.3     && < 1.4,
-    time                      >= 1.8     && < 2.0
+    time                      >= 1.4     && < 2.0
 
   if flag(development)
     build-depends:
@@ -48,8 +48,9 @@ Executable battleship
     -- warnings allows quicker workflow.
     ghc-options: -threaded -w
   else
+    ld-options: -rtsopts
     if impl(ghc >= 6.12.0)
       ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
-                   -fno-warn-unused-do-bind
+                   -fno-warn-unused-do-bind -rtsopts
     else
       ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
