--- a/server/battleship.cabal
+++ b/server/battleship.cabal
@@ -1,5 +1,5 @@
 Name:                battleship
-Version:             0.9
+Version:             1.0
 Synopsis:            Battleship
 Description:         Battleship Game server
 License:             MIT
@@ -35,7 +35,7 @@ Executable battleship
     configurator              >= 0.3     && < 0.4,
     bson                      >= 0.3     && < 0.4,
     uuid                      >= 1.3     && < 1.4,
-    time                      >= 1.4     && < 2.0
+    time                      >= 1.8     && < 2.0
 
   if flag(development)
     build-depends:
@@ -51,6 +51,6 @@ Executable battleship
     ld-options: -rtsopts
     if impl(ghc >= 6.12.0)
       ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
-                   -fno-warn-unused-do-bind -rtsopts
+                   -fno-warn-unused-do-bind
     else
       ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
