--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Battleship",
-  "name": "Battleship",
+  "name": "Battleship Game",
   "icons": [
     {
       "src": "favicon.ico",
