--- a/bot/battleship-bot.cabal
+++ b/bot/battleship-bot.cabal
@@ -54,7 +54,7 @@ executable battleship-bot
   main-is:             Main.hs
 
   -- Modules included in this executable, other than Main.
-  other-modules: Play
+  other-modules: Play, Types
 
   -- LANGUAGE extensions used by modules in this package.
   -- other-extensions:
@@ -62,8 +62,12 @@ executable battleship-bot
   -- Other library packages from which modules are imported.
   build-depends:       
     base                      >=4.11     && < 4.12,
+    text                      >= 1.2.1   && < 1.3,
     aeson                     >= 1.3     && < 1.5,
-    configurator              >= 0.3     && < 0.4
+    configurator              >= 0.3     && < 0.4,
+    mongoDB                   >= 2.4     && < 3,
+    connection                >= 0.2     && < 0.3,
+    http-conduit              >= 2.3     && < 2.4
 
   -- Directories containing source files.
   hs-source-dirs:      src
