--- a/bot/battleship-bot.cabal
+++ b/bot/battleship-bot.cabal
@@ -66,6 +66,7 @@ executable battleship-bot
     aeson                     >= 1.3     && < 1.5,
     configurator              >= 0.3     && < 0.4,
     mongoDB                   >= 2.4     && < 3,
+    http-types                >= 0.12    && < 1.13,
     connection                >= 0.2     && < 0.3,
     http-conduit              >= 2.3     && < 2.4
 
