--- a/bot/battleship-bot.cabal
+++ b/bot/battleship-bot.cabal
@@ -63,9 +63,11 @@ executable battleship-bot
   build-depends:       
     base                      >=4.11     && < 4.12,
     text                      >= 1.2.1   && < 1.3,
+    bson                      >= 0.3     && < 0.4,
     aeson                     >= 1.3     && < 1.5,
     configurator              >= 0.3     && < 0.4,
     mongoDB                   >= 2.4     && < 3,
+    random                    >= 1.0     && < 1.5,
     http-types                >= 0.12    && < 1.13,
     connection                >= 0.2     && < 0.3,
     http-conduit              >= 2.3     && < 2.4
