--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,8 @@
     "ramda": "^0.26.1",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
-    "rxjs": "^6.5.3"
+    "rxjs": "^6.5.3",
+    "lodash.template": "^4.5.0"
   },
   "scripts": {
     "start": "react-scripts-ts start",
