--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,8 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0",
-    "typescript": "~3.7.5"
+    "typescript": "~3.7.5",
+    "cross-env": "^7.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -44,6 +45,5 @@
     ]
   },
   "devDependencies": {
-    "cross-env": "^7.0.0"
   }
 }
