--- a/.travis.yml
+++ b/.travis.yml
@@ -26,8 +26,7 @@ addons:
       - libgmp-dev
 
 env:
-  - CI=true
-  - NODE_ENV=production
+  - CI=true NODE_ENV=production
 jobs:
   include:
     - stage: Install Stack
