add paths to node_modules in travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -54,13 +54,16 @@ jobs:
         - yarn install --frozen-lockfile
     - stage: Audit
       script:
+        - export PATH=$HOME/client/node_modules/.bin:$PATH
         - cd ./client
         - yarn audit
     - stage: Build Frontend
       script:
+        - export PATH=$HOME/client/node_modules/.bin:$PATH
         - cd ./client
         - yarn build
     - stage: Test Frontend
       script:
+        - export PATH=$HOME/client/node_modules/.bin:$PATH
         - cd ./client
         - yarn test --all --ci
