--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,14 @@ env:
   - CI=true NODE_ENV=production
 jobs:
   include:
+    - stage: Test Stage
+      script:
+        - cd ./client
+        - yarn install --frozen-lockfile
+        - ls ./
+        - ls ./node_modules/
+        - ls ./node_modules/.bin
+        - echo $PATH
     - stage: Install Stack
       script:
         - export DIR=~/.local/bin
@@ -61,6 +69,7 @@ jobs:
       script:
         - export PATH=$HOME/client/node_modules/.bin:$PATH
         - cd ./client
+        - ls ./node_modules/
         - yarn build
     - stage: Test Frontend
       script:
