--- a/.travis.yml
+++ b/.travis.yml
@@ -33,10 +33,13 @@ jobs:
       script:
         - cd ./client
         - yarn install --frozen-lockfile
+        - export PATH=$HOME/client/node_modules/.bin:$PATH
         - ls ./
         - ls ./node_modules/
         - ls ./node_modules/.bin
+        - echo $HOME
         - echo $PATH
+        - yarn build
     - stage: Install Stack
       script:
         - export DIR=~/.local/bin
@@ -69,7 +72,6 @@ jobs:
       script:
         - export PATH=$HOME/client/node_modules/.bin:$PATH
         - cd ./client
-        - ls ./node_modules/
         - yarn build
     - stage: Test Frontend
       script:
